# tca-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
tca/: Cargo.toml  README.md
tca-cli/: Cargo.toml  README.md
tca-cli/src/: add.rs  config.rs  export.rs  init.rs  list.rs  main.rs  validate.rs
tca-cli/src/export/: mod.rs
tca-cli/src/validate/: mod.rs
tca-loader/: Cargo.toml  README.md
tca-loader/src/: lib.rs
tca-ratatui/: Cargo.toml  README.md
tca-ratatui/examples/: basic.rs  palette.rs  picker.rs  styleset.rs
tca-ratatui/src/: lib.rs  styleset.rs  tests.rs  theme.rs
tca-ratatui/src/widgets/: color_picker.rs  mod.rs
tca-types/: Cargo.toml  README.md
tca-types/src/: base24.rs  builtin.rs  config.rs  cursor.rs  lib.rs  theme.rs  util.rs
tca-types/src/themes/: catppuccin-mocha.toml  cyberpunk.toml  cyberpunk.yaml  mono.yaml
tca/src/: list.rs  main.rs
tca/src/export/: mod.rs
tca/src/shared/: mod.rs
tca/src/validate/: mod.rs
