[workspace]
resolver = "2"
members = [
    "tca-types",
    "tca-loader",
    "tca",
    "tca-ratatui",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/carmiac/tca-rust"

[workspace.dependencies]
# Internal dependencies
tca-types = { path = "./tca-types" }
tca-loader = { path = "./tca-loader" }

# External dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
directories = "5.0"
colored = "2.1"
jsonschema = "0.18"
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.30"
crossterm = "0.29"
