[workspace]
resolver = "2"
members = ["tca-types", "tca-loader", "tca", "tca-ratatui"]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["carmiac"]
repository = "https://github.com/carmiac/tca-rust"
homepage = "https://github.com/carmiac/tca-rust"

[workspace.dependencies]
# Internal dependencies
tca-types = { path = "./tca-types", version = "0.3.0" }
tca-loader = { path = "./tca-loader", version = "0.3.0" }

# External dependencies
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
colored = "2.1"
etcetera = "0.11.0"
heck = "0.5"
jsonschema = "0.42"
strum = { version = "0.28.0", features = ["derive"] }
terminal-colorsaurus = "1"
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.30"
crossterm = "0.29"
