[package]
name = "tca-loader"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "XDG-compliant theme loader for TCA"
keywords = ["theme", "loader", "xdg", "filesystem", "tca"]
categories = ["filesystem", "config"]
readme = "README.md"

[dependencies]
anyhow = { workspace = true }
directories = { workspace = true }
serde = { workspace = true }
tca-types = { workspace = true }
toml = { workspace = true }
