[package]
name = "tca-loader"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/tca-loader"
description = "XDG-compliant theme loader for TCA"
keywords = ["theme", "loader", "xdg", "filesystem", "tca"]
categories = ["filesystem", "config"]
readme = "README.md"
exclude = [".gitignore", "codebook.toml"]

[dependencies]
anyhow = { workspace = true }
terminal-colorsaurus = { workspace = true }
etcetera = "0.11.0"
serde = { workspace = true }
tca-types = { workspace = true }
toml = { workspace = true }
convert_case = "0.11.0"
