[package]
name = "tca-loader"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/tca-loader"
description = "XDG-compliant theme loader for TCA"
keywords = ["theme", "loader", "xdg", "filesystem", "tca"]
categories = ["filesystem", "config"]
readme = "README.md"
exclude = [".gitignore", "codebook.toml"]

[dependencies]
anyhow = { workspace = true }
etcetera = { workspace = true }
heck = { workspace = true }
serde = { workspace = true }
tca-types = { workspace = true }
terminal-colorsaurus = { workspace = true }
toml = { workspace = true }
