[package]
name = "tca-ratatui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TCA theme support for Ratatui terminal UI framework"
keywords = ["tui", "theme", "ratatui", "terminal", "colors"]
categories = ["command-line-interface", "config"]
readme = "README.md"

[dependencies]
tca-types = { workspace = true }
tca-loader = { workspace = true, optional = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
ratatui = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
crossterm = { workspace = true }

[features]
default = ["loader"]
loader = ["dep:tca-loader"]
widgets = []

[[example]]
name = "basic"
required-features = ["loader"]

[[example]]
name = "picker"
required-features = ["loader", "widgets"]
