[package]
name = "tca-ratatui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/tca-ratatui"
description = "TCA theme support for Ratatui terminal UI framework"
keywords = ["tui", "theme", "ratatui", "terminal", "colors"]
categories = ["command-line-interface", "config"]
readme = "README.md"
exclude = [".gitignore", "codebook.toml"]

[dependencies]
tca-types = { workspace = true, optional = true }
tca-loader = { workspace = true, optional = true }
serde = { workspace = true }
toml = { workspace = true }
ratatui = { workspace = true }
anyhow = { workspace = true }
strum = { version = "0.28.0", features = ["derive"] }
terminal-colorsaurus = { workspace = true }
convert_case = "0.11.0"

[dev-dependencies]
crossterm = { workspace = true }

[features]
default = ["loader"]
loader = ["dep:tca-loader", "dep:tca-types"]
widgets = []

[[example]]
name = "basic"
required-features = ["loader"]

[[example]]
name = "picker"
required-features = ["loader", "widgets"]
