[package]
name = "tca-ratatui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/tca-ratatui"
description = "TCA theme support for Ratatui terminal UI framework"
keywords = ["tui", "theme", "ratatui", "terminal", "colors"]
categories = ["command-line-interface", "config"]
readme = "README.md"
exclude = [".gitignore", "codebook.toml"]

[dependencies]
tca-types = { workspace = true, optional = true }
serde = { workspace = true }
anyhow = { workspace = true }
ratatui = { workspace = true }
heck.workspace = true

[dev-dependencies]
crossterm = { workspace = true }

[features]
default = ["fs", "widgets"]
fs = ["dep:tca-types"]
widgets = []

[[example]]
name = "basic"
required-features = ["fs"]

[[example]]
name = "styleset"
required-features = ["fs"]

[[example]]
name = "picker"
required-features = ["fs", "widgets"]
