[package]
name = "tca-types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core type definitions for Terminal Colors Architecture"
keywords = ["color", "theme", "terminal", "tca"]
categories = ["data-structures", "parser-implementations"]
readme = "README.md"

[dependencies]
anyhow = { workspace = true, optional = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true, optional = true }

[features]
