[package]
name = "tca-types"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/tca-types"
description = "Core type definitions for Terminal Colors Architecture"
keywords = ["color", "theme", "terminal", "tca"]
categories = ["data-structures", "parser-implementations"]
readme = "README.md"
exclude = [".gitignore", "codebook.toml"]

[dependencies]
serde = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
heck = { workspace = true }
anyhow = { workspace = true }
etcetera = { workspace = true, optional = true }

[features]
default = ["fs"]
fs = ["dep:etcetera"]
