[package]
name = "tca"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Terminal Colors Architecture (TCA) - Theme management toolkit"

[[bin]]
name = "tca"
path = "src/main.rs"

[dependencies]
tca-types = { workspace = true }
tca-loader = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
jsonschema = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
colored = { workspace = true }
toml = { workspace = true }
