[package]
name = "tca"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for validating and exporting TCA themes"
keywords = ["terminal", "colors", "themes", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "tca"
path = "src/main.rs"

[dependencies]
tca-types = { workspace = true }
tca-loader = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonschema = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
colored = { workspace = true }
toml = { workspace = true }
