[package]
name = "tca-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI tool for validating and exporting TCA themes"
keywords = ["terminal", "colors", "themes", "cli"]
categories = ["command-line-utilities"]
readme = "README.md"
exclude = [".gitignore", "codebook.toml"]

[[bin]]
name = "tca"
path = "src/main.rs"

[dependencies]
tca-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonschema = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
colored = { workspace = true }
toml = { workspace = true }
